Исправления после review
метод delete теперь принимает только vacancyId
исправил логику выполнения метода в сервисе
исправил тесты